update notebooks to run on sample dataset

--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,119 +27,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"flipkart_product.csv\")"
+    "df = pd.read_csv(\"flipkart_sample_reviews.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ProductName</th>\n",
-       "      <th>Price</th>\n",
-       "      <th>Rate</th>\n",
-       "      <th>Review</th>\n",
-       "      <th>Summary</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Candes 12 L Room/Personal Air Cooler?ÿ?ÿ(White...</td>\n",
-       "      <td>??3,999</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Super!</td>\n",
-       "      <td>Great cooler.. excellent air flow and for this...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Candes 12 L Room/Personal Air Cooler?ÿ?ÿ(White...</td>\n",
-       "      <td>??3,999</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Awesome</td>\n",
-       "      <td>Best budget 2 fit cooler. Nice cooling</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Candes 12 L Room/Personal Air Cooler?ÿ?ÿ(White...</td>\n",
-       "      <td>??3,999</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Fair</td>\n",
-       "      <td>The quality is good but the power of air is de...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Candes 12 L Room/Personal Air Cooler?ÿ?ÿ(White...</td>\n",
-       "      <td>??3,999</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Useless product</td>\n",
-       "      <td>Very bad product it's a only a fan</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Candes 12 L Room/Personal Air Cooler?ÿ?ÿ(White...</td>\n",
-       "      <td>??3,999</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Fair</td>\n",
-       "      <td>Ok ok product</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                         ProductName     Price Rate  \\\n",
-       "0  Candes 12 L Room/Personal Air Cooler?ÿ?ÿ(White...  ??3,999    5   \n",
-       "1  Candes 12 L Room/Personal Air Cooler?ÿ?ÿ(White...  ??3,999    5   \n",
-       "2  Candes 12 L Room/Personal Air Cooler?ÿ?ÿ(White...  ??3,999    3   \n",
-       "3  Candes 12 L Room/Personal Air Cooler?ÿ?ÿ(White...  ??3,999    1   \n",
-       "4  Candes 12 L Room/Personal Air Cooler?ÿ?ÿ(White...  ??3,999    3   \n",
-       "\n",
-       "            Review                                            Summary  \n",
-       "0           Super!  Great cooler.. excellent air flow and for this...  \n",
-       "1          Awesome             Best budget 2 fit cooler. Nice cooling  \n",
-       "2             Fair  The quality is good but the power of air is de...  \n",
-       "3  Useless product                 Very bad product it's a only a fan  \n",
-       "4             Fair                                      Ok ok product  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -152,18 +49,8 @@
     {
      "data": {
       "text/plain": [
-       "MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (Pack of 1, Silver, Steel)                                                     9278\n",
-       "cello Pack of 18 Opalware Cello Dazzle Lush Fiesta Opalware Dinner Set, 18 Pieces Dinner SetÂ Â (White, Microwave Safe)    8870\n",
-       "Home Sizzler 153 cm (5.02 ft) Polyester Room Darkening Window Curtain (Pack Of 2)Â Â (Floral, Brown)                       4350\n",
-       "CMerchants Multi Organiser BLue-4 Book Shelf Metal Open Book ShelfÂ Â (Finish Color - BLUE, DIY(Do-It-Yourself))           2399\n",
-       "Kadio Analog 20 cm X 20 cm Wall ClockÂ Â (Beige, With Glass, Standard)                                                     2380\n",
-       "                                                                                                                           ... \n",
-       "38024PP25 Minimalists Analog Watch  - For Men                                                                                 9\n",
-       "LS2727 Avatar Day and Date Functioning Crocodile Strap Analog Analog Watch  - For Men                                         8\n",
-       "Stylish Brown Sports Men Watches Multifunctional Luxury Waterproof Modern Digital Watch  - For Men                            5\n",
-       "LS2917 Mesh Strap All Black Avatar Day and Date Functioning Quartz Analog Watch  - For Men                                    2\n",
-       "\u001a                                                                                                                             1\n",
-       "Name: ProductName, Length: 812, dtype: int64"
+       "MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (Pack of 1, Silver, Steel)    9278\n",
+       "Name: ProductName, dtype: int64"
       ]
      },
      "metadata": {},
@@ -180,18 +67,8 @@
     {
      "data": {
       "text/plain": [
-       "â¹1,299                                                       10005\n",
-       "â¹648                                                          9278\n",
-       "â¹299                                                          6697\n",
-       "â¹339                                                          2542\n",
-       "â¹13,999                                                       2518\n",
-       "                                                               ...  \n",
-       "??8,499                                                          10\n",
-       "â¹404                                                             5\n",
-       "Nova Plus Amaze NI 10 1100 W Dry Iron?ÿ?ÿ(Grey & Turquoise)        1\n",
-       "Pigeon Favourite Electric Kettle?ÿ?ÿ(1.5 L, Silver, Black)         1\n",
-       "Bajaj DX 2 L/W Dry Iron                                            1\n",
-       "Name: Price, Length: 561, dtype: int64"
+       "â¹648    9278\n",
+       "Name: Price, dtype: int64"
       ]
      },
      "metadata": {},
@@ -208,15 +85,11 @@
     {
      "data": {
       "text/plain": [
-       "5                                                              108694\n",
-       "4                                                               39653\n",
-       "1                                                               19607\n",
-       "3                                                               15681\n",
-       "2                                                                6234\n",
-       "Pigeon Favourite Electric Kettle?ÿ?ÿ(1.5 L, Silver, Black)          1\n",
-       "Bajaj DX 2 L/W Dry Iron                                             1\n",
-       "Nova Plus Amaze NI 10 1100 W Dry Iron?ÿ?ÿ(Grey & Turquoise)         1\n",
-       "s                                                                   1\n",
+       "5    6103\n",
+       "4    2094\n",
+       "3     584\n",
+       "1     340\n",
+       "2     157\n",
        "Name: Rate, dtype: int64"
       ]
      },
@@ -234,18 +107,18 @@
     {
      "data": {
       "text/plain": [
-       "Nan                                                            20862\n",
-       "Wonderful                                                       8918\n",
-       "Awesome                                                         5506\n",
-       "Worth every penny                                               5464\n",
-       "Classy product                                                  5437\n",
-       "                                                               ...  \n",
-       "Bajaj DX 2 L/W Dry Iron                                            1\n",
-       "Nova Plus Amaze NI 10 1100 W Dry Iron?ÿ?ÿ(Grey & Turquoise)        1\n",
-       "Great product.....with this price range                            1\n",
-       "best juicer                                                        1\n",
-       "Well!!!                                                            1\n",
-       "Name: Review, Length: 1264, dtype: int64"
+       "Wonderful                                       526\n",
+       "Must buy!                                       370\n",
+       "Terrific                                        369\n",
+       "Best in the market!                             360\n",
+       "Perfect product!                                353\n",
+       "                                               ... \n",
+       "This is the real thermos                          1\n",
+       "Go for it !!                                      1\n",
+       "happy with the product and flipcart service.      1\n",
+       "great buy                                         1\n",
+       "GOOD PRODUCT                                      1\n",
+       "Name: Review, Length: 71, dtype: int64"
       ]
      },
      "metadata": {},
@@ -262,18 +135,18 @@
     {
      "data": {
       "text/plain": [
-       "Good                                                                           14175\n",
-       "Nice                                                                            7859\n",
-       "Good product                                                                    5081\n",
-       "Nice product                                                                    3637\n",
-       "Super                                                                           2643\n",
-       "                                                                               ...  \n",
-       "Very bad don't buy cheap quality                                                   1\n",
-       "Super â¤ï¸ð                                                                   1\n",
-       "Too bad the clock is not working  properly even one day also don't buy this        1\n",
-       "Fantastic wall clock really love itð                                            1\n",
-       "Thanks â¤ï¸                                                                      1\n",
-       "Name: Summary, Length: 98343, dtype: int64"
+       "Good                                                                                                                                                                                                                                                                           1067\n",
+       "Nice                                                                                                                                                                                                                                                                            504\n",
+       "Good product                                                                                                                                                                                                                                                                    464\n",
+       "Nice product                                                                                                                                                                                                                                                                    304\n",
+       "Very good                                                                                                                                                                                                                                                                       188\n",
+       "                                                                                                                                                                                                                                                                               ... \n",
+       "Good productð¤©                                                                                                                                                                                                                                                                  1\n",
+       "Till now the product is great and service too                                                                                                                                                                                                                                     1\n",
+       "It is written that it can keep the liquid cold/hot for 24hrs. But after using or opening the flip lid the liquid doesn't stays hot till that time. Minimum 10 hrs it can keep the liquid hot almost like boiling point. Otherwise the product is very good & 100% original.       1\n",
+       "Good ince product                                                                                                                                                                                                                                                                 1\n",
+       "Good quality.trusted milton.                                                                                                                                                                                                                                                      1\n",
+       "Name: Summary, Length: 4369, dtype: int64"
       ]
      },
      "metadata": {},
@@ -296,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -304,13 +177,13 @@
       "text/plain": [
        "ProductName    object\n",
        "Price          object\n",
-       "Rate           object\n",
+       "Rate            int64\n",
        "Review         object\n",
        "Summary        object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,21 +194,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ProductName     0\n",
-       "Price           1\n",
-       "Rate            1\n",
-       "Review          4\n",
-       "Summary        14\n",
+       "ProductName    0\n",
+       "Price          0\n",
+       "Rate           0\n",
+       "Review         0\n",
+       "Summary        0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,25 +219,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5                                                              108694\n",
-       "4                                                               39653\n",
-       "1                                                               19607\n",
-       "3                                                               15681\n",
-       "2                                                                6234\n",
-       "Pigeon Favourite Electric Kettle?ÿ?ÿ(1.5 L, Silver, Black)          1\n",
-       "Bajaj DX 2 L/W Dry Iron                                             1\n",
-       "Nova Plus Amaze NI 10 1100 W Dry Iron?ÿ?ÿ(Grey & Turquoise)         1\n",
-       "s                                                                   1\n",
+       "5    6103\n",
+       "4    2094\n",
+       "3     584\n",
+       "1     340\n",
+       "2     157\n",
        "Name: Rate, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,11 +352,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"cleaned_product_reviews.csv\", index=False)"
+    "# df.to_csv(\"cleaned_product_reviews.csv\", index=False)\n",
+    "df.to_csv(\"cleaned_sample.csv\", index=False)"
    ]
   }
  ],
