--- a/topic_modeling.ipynb
+++ b/topic_modeling.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,11 +27,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"cleaned_product_reviews.csv\")"
+    "df = pd.read_csv(\"cleaned_sample.csv\")  # on local: cleaned_product_reviews.csv"
    ]
   },
   {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,16 +53,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "topics = extract_topics_from_reviews(dataset=df, product=df.ProductName.unique()[1])"
+    "topics = extract_topics_from_reviews(dataset=df, product=df.ProductName.unique()[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -94,50 +94,55 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Crompton 75 L Desert Air Cooler?ÿ?ÿ(White, Tea...</td>\n",
+       "      <td>MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...</td>\n",
        "      <td>1</td>\n",
-       "      <td>product waste money working low</td>\n",
+       "      <td>bad products experience time month</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Crompton 75 L Desert Air Cooler?ÿ?ÿ(White, Tea...</td>\n",
+       "      <td>MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...</td>\n",
        "      <td>2</td>\n",
-       "      <td>bad cooler pump air water</td>\n",
+       "      <td>quality poor leakage bad problem</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Crompton 75 L Desert Air Cooler?ÿ?ÿ(White, Tea...</td>\n",
+       "      <td>MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...</td>\n",
        "      <td>3</td>\n",
-       "      <td>good product quality worst expected</td>\n",
+       "      <td>product bad waste money buy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Crompton 75 L Desert Air Cooler?ÿ?ÿ(White, Tea...</td>\n",
+       "      <td>MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...</td>\n",
        "      <td>4</td>\n",
-       "      <td>cooling good product proper disappointed</td>\n",
+       "      <td>good product hot hrs satisfied</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Crompton 75 L Desert Air Cooler?ÿ?ÿ(White, Tea...</td>\n",
+       "      <td>MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...</td>\n",
        "      <td>5</td>\n",
-       "      <td>product water good working cooler</td>\n",
+       "      <td>working hours hot hour water</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             Product  ...                                     Topic\n",
-       "0  Crompton 75 L Desert Air Cooler?ÿ?ÿ(White, Tea...  ...           product waste money working low\n",
-       "1  Crompton 75 L Desert Air Cooler?ÿ?ÿ(White, Tea...  ...                 bad cooler pump air water\n",
-       "2  Crompton 75 L Desert Air Cooler?ÿ?ÿ(White, Tea...  ...       good product quality worst expected\n",
-       "3  Crompton 75 L Desert Air Cooler?ÿ?ÿ(White, Tea...  ...  cooling good product proper disappointed\n",
-       "4  Crompton 75 L Desert Air Cooler?ÿ?ÿ(White, Tea...  ...         product water good working cooler\n",
+       "                                             Product  Topic Number  \\\n",
+       "0  MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...             1   \n",
+       "1  MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...             2   \n",
+       "2  MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...             3   \n",
+       "3  MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...             4   \n",
+       "4  MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...             5   \n",
        "\n",
-       "[5 rows x 3 columns]"
+       "                                Topic  \n",
+       "0  bad products experience time month  \n",
+       "1    quality poor leakage bad problem  \n",
+       "2         product bad waste money buy  \n",
+       "3      good product hot hrs satisfied  \n",
+       "4        working hours hot hour water  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,8 +182,19 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You must define an OpenAI API key in a .env file in this repository\n",
+    "```\n",
+    "API_KEY=<insert API key>\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,22 +203,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on the customer complaints related to the Crompton 75 L Desert Air Cooler, here are some suggestions to improve the product:\n",
+      "Based on the keywords you provided, here are some ways that the MILTON Thermosteel Flip Lid 500 ml Flask can be improved:\n",
       "\n",
-      "1. Improve the quality control process during production to reduce the number of defective units that waste customers' money and do not work properly.\n",
-      "2. Address the issue of a bad cooler pump that customers have complained about, either by offering better quality pumps or ensuring that they are properly installed and maintained.\n",
-      "3. Clarify the proper usage and maintenance of the product to meet customer's expectations and avoid disappointment. Include detailed instructions and troubleshooting guides.\n",
-      "4. Enhance the product's cooling performance, which customers have found unsatisfactory, by upgrading the cooler's technology or increasing the number of cooling pads.\n",
-      "5. Address any design flaws or build quality issues that may be causing customers to be disappointed or dissatisfied with the product.\n",
+      "1. Quality: To address complaints about poor quality and leakage issues, MILTON can review its manufacturing process and supply chain management to identify and eliminate weaknesses that could compromise product quality. A more rigorous quality control mechanism should be implemented to ensure that only high-quality products are released to customers.\n",
       "\n",
-      "Overall, focusing on improving the product quality, cooling performance, and addressing customer issues regarding the cooler pump would help improve customer satisfaction with the Crompton 75 L Desert Air Cooler.\n"
+      "2. Insulation: Some customers have complained about the product failing to keep items hot for extended periods of time. MILTON can consider improving the insulation of the product to increase its capacity to keep drinks hot for longer.\n",
+      "\n",
+      "3. Capacity: Customers have found the capacity of a 500mL flask to be inadequate for their needs. MILTON could consider offering flasks of different sizes to meet different customers' requirements.\n",
+      "\n",
+      "4. Design: The MILTON flask has received praise for its design, but it could still be further improved based on customers' feedback. Specifically, some customers have had difficulty with the flip lid. MILTON could refine the design of the flip lid mechanism to make it easier to use.\n",
+      "\n",
+      "5. Value for money: Some customers have felt that the product was overpriced and did not represent good value for money. MILTON can address this concern by analyzing its pricing strategies and re-evaluating its cost structure to offer competitive pricing options while still maintaining high-quality products.\n",
+      "\n",
+      "Overall, MILTON can use customer feedback to improve the quality, functionality, and design of the MILTON Thermosteel Flip Lid 500 ml Flask, thus ensuring that customer satisfaction is prioritized.\n"
      ]
     }
    ],
