show multiple words per topic

--- a/topic_modeling.ipynb
+++ b/topic_modeling.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,18 +53,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "topics = extract_topics_from_reviews(dataset=df, product=df.ProductName.unique()[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 words per topic:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Topic Number</th>\n",
+       "      <th>Topic</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>quality</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>product</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>working</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             Product  Topic Number    Topic\n",
+       "0  MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...             1      bad\n",
+       "1  MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...             2  quality\n",
+       "2  MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...             3  product\n",
+       "3  MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...             4     good\n",
+       "4  MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...             5  working"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 words per topic:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Topic Number</th>\n",
+       "      <th>Topic</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>bad products experience</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>quality poor leakage</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>product bad waste</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>good product hot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>working hours hot</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             Product  Topic Number  \\\n",
+       "0  MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...             1   \n",
+       "1  MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...             2   \n",
+       "2  MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...             3   \n",
+       "3  MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...             4   \n",
+       "4  MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...             5   \n",
+       "\n",
+       "                     Topic  \n",
+       "0  bad products experience  \n",
+       "1     quality poor leakage  \n",
+       "2        product bad waste  \n",
+       "3         good product hot  \n",
+       "4        working hours hot  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 words per topic:\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -142,13 +307,102 @@
        "4        working hours hot hour water  "
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 words per topic:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Topic Number</th>\n",
+       "      <th>Topic</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>bad products experience time month heat receiv...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>quality poor leakage bad problem product worst...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>product bad waste money buy don leaking flask ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>good product hot hrs satisfied water heat don ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>working hours hot hour water 24 average damage...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             Product  Topic Number  \\\n",
+       "0  MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...             1   \n",
+       "1  MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...             2   \n",
+       "2  MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...             3   \n",
+       "3  MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...             4   \n",
+       "4  MILTON Thermosteel Flip Lid 500 ml FlaskÂ Â (P...             5   \n",
+       "\n",
+       "                                               Topic  \n",
+       "0  bad products experience time month heat receiv...  \n",
+       "1  quality poor leakage bad problem product worst...  \n",
+       "2  product bad waste money buy don leaking flask ...  \n",
+       "3  good product hot hrs satisfied water heat don ...  \n",
+       "4  working hours hot hour water 24 average damage...  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "topics"
+    "for n_words in [1, 3, 5, 10]:\n",
+    "    print(f\"{n_words} words per topic:\")\n",
+    "    topics = extract_topics_from_reviews(dataset=df, product=df.ProductName.unique()[0], num_topics=5, num_words_per_topic=n_words)\n",
+    "    display(topics)"
    ]
   },
   {
